--- a/app_uniplan/templates/app_uniplan/base.html
+++ b/app_uniplan/templates/app_uniplan/base.html
@@ -25,7 +25,7 @@
 				<div class="card-body">
 					<h5 class="card-title">UniPlan.io</h5>
 					<p class="card-text">
-						<a href="">Home</a>
+						<a href="{% url 'index' %}">Home</a>
 					</p>
 					<p class="card-text">
 						<a href="">About</a>
@@ -33,11 +33,17 @@
 					<p class="card-text">
 						<a href="">Contact</a>
 					</p>
+					{% if user.is_authenticated %}
 					<p class="card-text">
-						<a href="">Login</a>
+						<a href="{% url 'logout' %}">Logout</a>
 					</p>
+					{% else %}
 					<p class="card-text">
-						<a href="">Register</a>
+						<a href="{% url 'login' %}">Login</a>
+					</p>
+					{% endif %}
+					<p class="card-text">
+						<a href="{% url 'signup' %}">Register</a>
 					</p>
 				</div>
 			</div>
@@ -45,8 +51,12 @@
 		<div class="col-md-10">
 			<div class="card">
 				<div class="card-body">
-					<h1 class="card-title text-center">Welcome to UniPlan.io</h5>
-					<p class="card-text">
+					{% if user.is_authenticated %}
+					<h1 class="card-title text-center">Welcome {{ user.username }}! to UniPlan.io</h5>
+					{% else %}
+					<h1 class="card-title text-center">Welcome! to UniPlan.io</h5>
+					{% endif %}
+						<p class="card-text">
 						UniPlan.io is a tool designed to intelligently help students manage their: unit enrollment, assignments/exams, grades, and more. <br>
 						We currently support the following institutions:
 						<ul>
