Password Reset and Auth

--- a/app_uniplan/templates/app_uniplan/base.html
+++ b/app_uniplan/templates/app_uniplan/base.html
@@ -45,6 +45,9 @@
 					<p class="card-text">
 						<a href="{% url 'signup' %}">Register</a>
 					</p>
+					<p class="card-text">
+						<a href="{% url 'password_reset' %}">Password reset</a>
+					</p>
 				</div>
 			</div>
 		</div>
