--- a/app_uniplan/templates/app_uniplan/base.html
+++ b/app_uniplan/templates/app_uniplan/base.html
@@ -35,16 +35,19 @@
 					</p>
 					{% if user.is_authenticated %}
 					<p class="card-text">
+						<a href="{% url 'update_profile' %}">Profile: {{ user.username }}</a>
+					</p>
+					<p class="card-text">
 						<a href="{% url 'logout' %}">Logout</a>
 					</p>
 					{% else %}
 					<p class="card-text">
 						<a href="{% url 'login' %}">Login</a>
 					</p>
-					{% endif %}
 					<p class="card-text">
 						<a href="{% url 'signup' %}">Register</a>
 					</p>
+					{% endif %}
 					<p class="card-text">
 						<a href="{% url 'password_reset' %}">Password reset</a>
 					</p>
