--- a/app_uniplan/templates/app_uniplan/base.html
+++ b/app_uniplan/templates/app_uniplan/base.html
@@ -7,10 +7,17 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>UniPlan.io</title>
-	<!--Bootstrap CSS-->
-	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 	<!--Custom CSS-->
 	<link rel="stylesheet" href="{% static 'css/sidebars.css' %}">
+	<!--Bootstrap CSS-->
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+	<!-- JQuery -->
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+	<!-- Data Tables-->
+	<link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/v/bs5/dt-1.11.3/datatables.min.css"/>
+	<script type="text/javascript" src="https://cdn.datatables.net/v/bs5/dt-1.11.3/datatables.min.js"></script>
+	
+
 </head>
 
 <body>
@@ -34,6 +41,15 @@
 						<a href="">Contact</a>
 					</p>
 					{% if user.is_authenticated %}
+					<p class="card-text">
+						<a href="{% url 'units' %}">Units</a>
+					</p>
+					<p class="card-text">
+						<a href="{% url 'assignments' %}">Assignments</a>
+					</p>
+					<p class="card-text">
+						<a href="{% url 'index' %}">Enrollment Helper</a>
+					</p>
 					<p class="card-text">
 						<a href="{% url 'update_profile' %}">Profile: {{ user.username }}</a>
 					</p>
