fix enrollment link

--- a/app_uniplan/templates/app_uniplan/base.html
+++ b/app_uniplan/templates/app_uniplan/base.html
@@ -48,7 +48,7 @@
 						<a href="{% url 'assignments' %}">Assignments</a>
 					</p>
 					<p class="card-text">
-						<a href="{% url 'index' %}">Enrollment Helper</a>
+						<a href="{% url 'enrollment' %}">Enrollment Helper</a>
 					</p>
 					<p class="card-text">
 						<a href="{% url 'update_profile' %}">Profile: {{ user.username }}</a>
