--- a/app_uniplan/templates/app_uniplan/enrollment.html
+++ b/app_uniplan/templates/app_uniplan/enrollment.html
@@ -6,7 +6,15 @@
 
 <h1>Your Unit Enrollment:</h1>
 
-
+<table class="table table-bordered">
+	<tr>
+		<th>Year</th>
+		<th>Semester 1</th>
+		<th>Semester 2</th>
+		<th>Semester 3</th>
+	</tr>
+	
+</table>
 
 
 
