Begin work on displaying majors, minors, and core sequences

--- a/app_uniplan/templates/app_uniplan/base.html
+++ b/app_uniplan/templates/app_uniplan/base.html
@@ -6,7 +6,7 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>UniPlan.io</title>
+	<title>{% block title %}UniPlan.io{% endblock %}</title>
 	<!--Custom CSS-->
 	<link rel="stylesheet" href="{% static 'css/sidebars.css' %}">
 	<!--Bootstrap CSS-->
@@ -49,6 +49,9 @@
 					</p>
 					<p class="card-text">
 						<a href="{% url 'enrollment' %}">Enrollment Helper</a>
+					</p>
+					<p class="card-text">
+						<a href="{% url 'sequences' %}">Majors & Minors</a>
 					</p>
 					<p class="card-text">
 						<a href="{% url 'update_profile' %}">Profile: {{ user.username }}</a>
