--- a/app_uniplan/templates/registration/edit_profile.html
+++ b/app_uniplan/templates/registration/edit_profile.html
@@ -6,14 +6,13 @@
 
 
 <h2>Edit Profile: {{ user.username }}</h2>
-Course: {{ user.student_profile.course }}
 <br>
-University: {{user.student_profile.university}}
 
   <div class="form-group">
   <form method="post">
     {% csrf_token %}
-    {{ form.as_p }}
+    {{ user_form.as_p }}
+	{{ profile_form.as_p }}
     <button type="submit">Save Changes</button>
   </form>
   <div>
