--- a/app_uniplan/templates/app_uniplan/unit_detail.html
+++ b/app_uniplan/templates/app_uniplan/unit_detail.html
@@ -7,7 +7,9 @@
 
 <h1>{{unit.unit_code}}: {{unit.name}} </h1>
 
-<a href="{{unit.unitguideurl}}">Unit Guide</a>
+<p>{{ enrollments }}</p>
+
+<a href="{{unit.unitguideURL}}">Unit Guide</a>
 
 <p>{{unit.description}}</p>
 
