--- a/app_uniplan/templates/app_uniplan/enrollment.html
+++ b/app_uniplan/templates/app_uniplan/enrollment.html
@@ -23,6 +23,34 @@
 	{% endfor %}
 </table>
 
+<div class="container">
+	<div class="row align-items-start">
+		<div class="col">
+			<h1>Core units to complete:</h1>
+			<ul>
+				<li>ex 1</li>
+				<li>ex 1</li>
+				<li>ex 1</li>
+			</ul>
+		</div>
+		<div class="col">
+			<h1>Major units to complete:</h1>
+			<ul>
+				<li>ex 1</li>
+				<li>ex 1</li>
+				<li>ex 1</li>
+			</ul>	
+		</div>
+		<div class="col">
+			<h1>Core units to complete:</h1>
+			<ul>
+				<li>ex 1</li>
+				<li>ex 1</li>
+				<li>ex 1</li>
+			</ul>
+		</div>
+	</div>
+</div>
 
 
 {% endblock %}
