boostrap cols instead of table layout for week layout

--- a/app_uniplan/templates/app_uniplan/index.html
+++ b/app_uniplan/templates/app_uniplan/index.html
@@ -40,7 +40,112 @@
 	</div>
 	{% comment %} row containing weeks view {% endcomment %}
 	<div class="row">
-		
+		<div class="col">Week</div>
+		<div class="col">Monday</div>
+		<div class="col">Tuesday</div>
+		<div class="col">Wednesday</div>
+		<div class="col">Thursday</div>
+		<div class="col">Friday</div>
+		<div class="col">Saturday</div>
+		<div class="col">Sunday</div>
+	</div>
+	<div class="row">
+		<div class="col">
+			<div class="card">
+				<div class="card-body">
+					<div class="card-title">
+						<h3>Week 1</h3>
+					</div>
+					<div class="card-body">
+						week 1
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="col">
+			<div class="card">
+				<div class="card-body">
+					<div class="card-title">
+						<h3>Week 1</h3>
+					</div>
+					<div class="card-body">
+						week 1
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="col">
+			<div class="card">
+				<div class="card-body">
+					<div class="card-title">
+						<h3>Week 1</h3>
+					</div>
+					<div class="card-body">
+						week 1
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="col">
+			<div class="card">
+				<div class="card-body">
+					<div class="card-title">
+						<h3>Week 1</h3>
+					</div>
+					<div class="card-body">
+						week 1
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="col">
+			<div class="card">
+				<div class="card-body">
+					<div class="card-title">
+						<h3>Week 1</h3>
+					</div>
+					<div class="card-body">
+						week 1
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="col">
+			<div class="card">
+				<div class="card-body">
+					<div class="card-title">
+						<h3>Week 1</h3>
+					</div>
+					<div class="card-body">
+						week 1
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="col">
+			<div class="card">
+				<div class="card-body">
+					<div class="card-title">
+						<h3>Week 1</h3>
+					</div>
+					<div class="card-body">
+						week 1
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="col">
+			<div class="card">
+				<div class="card-body">
+					<div class="card-title">
+						<h3>Week 1</h3>
+					</div>
+					<div class="card-body">
+						week 1
+					</div>
+				</div>
+			</div>
+		</div>
 	</div>
 
 {% endblock %}
