--- a/app_uniplan/templates/app_uniplan/assignments.html
+++ b/app_uniplan/templates/app_uniplan/assignments.html
@@ -37,7 +37,7 @@ $(document).ready(function() {
 <h1>Add an assignment</h1>
 <form method="POST">
 	{% csrf_token %}
-	{{ form.as_p }}
+	{{ form.as_table }}
 	<button type="submit" class="btn btn-primary">Add</button>
 </form>
 
