--- a/app_uniplan/templates/app_uniplan/assignments.html
+++ b/app_uniplan/templates/app_uniplan/assignments.html
@@ -52,48 +52,73 @@ $(document).ready(function() {
 		"order": [[ 2, "des" ]],
 		"paging": false,
 		"info": false,
-		{% comment %} 
-		"ajax": "{% url 'assignments_json' %}",
-		"columns": [
-			{ "data": "unit_code" },
-			{ "data": "title" },
-			{ "data": "due_week_text" },
-			{ "data": "due_date" },
-			{ "data": "status" }
-		],
-		"select": true, 
-		"buttons": [
-			{ extend: 'create', editor: editor },
-			{ extend: 'edit',   editor: editor },
-			{ extend: 'remove', editor: editor }
-		], {% endcomment %}
 	});
-});
+}); 
 
-$(document).ready(function() {
-	$('.editable').editable(function(value, settings) {
-		var id = $(this).data('id');
-		var type = $(this).data('type');
-		var data = {};
-		data[type] = value;
-		$.ajax({
-			url: "/api/staff/" + id,
-			type: "PUT",
-			data: data,
-			success: function(result) {
-				console.log(result);
-			}
-		});
-		return(value);
-	}, {
-		type: 'text',
-		submit: 'OK',
-		cancel: 'Cancel',
-		indicator: 'Saving...',
-		tooltip: 'Click to edit...'
-	});
-} );
+</script>
 
+    <script>
+        $(document).ready(function(){
+            $(document).on("click",".editable",function(){
+                var value=$(this).text();
+                var data_type=$(this).data("type");
+                var input_type="text";
+                if(data_type=="created_at")
+                {
+                    input_type="datetime-local";
+                }
+                var input="<input type='"+input_type+"' class='input-data' value='"+value+"' class='form-control'>";
+                $(this).html(input);
+                $(this).removeClass("editable")
+            });
+
+            $(document).on("blur",".input-data",function(){
+                var value=$(this).val();
+                var td=$(this).parent("td");
+                $(this).remove();
+                td.html(value);
+                td.addClass("editable");
+                var type=td.data("type");
+                sendToServer(td.data("id"),value,type);
+            });
+            $(document).on("keypress",".input-data",function(e){
+                var key=e.which;
+                if(key==13){
+                    var value=$(this).val();
+                    var td=$(this).parent("td");
+                    $(this).remove();
+                    td.html(value);
+                    td.addClass("editable");
+                   var type=td.data("type")
+                   sendToServer(td.data("id"),value,type);
+                }
+            });
+
+            function sendToServer(id,value,type){
+				console.log(id);
+                console.log(value);
+                console.log(type);
+				var ajax_data = {
+					'csrfmiddlewaretoken': '{{ csrf_token }}',
+					'id': id, 
+				}
+				ajax_data[type] = value;
+                $.ajax({
+                    url: `{% url "assignment_api" %}?pk={id}`,
+                    type:"PATCH",
+					headers: {
+						'X-CSRFToken': '{{ csrf_token }}'
+					},
+                    data: ajax_data,
+                })
+                .done(function(response){
+                    console.log(response);
+                })
+                .fail(function(){
+                   console.log("Error Occured");
+                });
+            }
+        });
 
 </script>
 
