--- a/app_uniplan/templates/app_uniplan/assignments.html
+++ b/app_uniplan/templates/app_uniplan/assignments.html
@@ -5,15 +5,22 @@
 
 <h1>Your upcoming assignments</h1>
 
-<a href="{% url "add_all_missing_assignments" %}"><button class="btn btn-warning">Click to add <b>{{total_assignments_count}} Tasks</b> Not yet added</button></a>
-
-
+<div class="row">
+<div class="col">
+	<a href="{% url "add_all_missing_assignments" %}"><button class="btn btn-warning">Click to add <b>{{total_assignments_count}} Tasks</b> Not yet added</button></a>
+</div>
+<div class="col">
+<p class="text-secondary"><i class="fa-solid fa-lightbulb text-warning"></i>&nbsp;&nbsp; Double click certain field to edit data</p>
+</div>
+</div>
+<i class="fa-solid fa-check"></i>
 <table id="assignments" class="table table-striped table-bordered">
 	<thead>
 		<tr>
 			<th>Edit</th>
 			<th>Unit</th>
 			<th>Assignment</th>
+			<th>Weighting</th>
 			<th>Due Week</th>
 			<th>Due Week (#)</th>
 			<th>Due Date</th>
@@ -24,59 +31,141 @@
 		{% for assignment in assignments %}
 		<tr>
 			<td><center><a href="{{ assignment.id }}"><i class="fa-solid fa-pen-to-square"></i></a></center></td>
-			<td>{{ assignment.unit }}</td>
+			<td style="font-size: 10px;">{{ assignment.unit }}</td>
 			<td><a href="{{ assignment.id }}">{{ assignment.title }}</a></td>
+			<td>{{ assignment.weighting_number|floatformat:0 }}%</td>
 			<td>{{ assignment.due_week_text }}</td>
 			<td class="editable" data-id="{{ assignment.id }}" data-type="due_week_number">{{ assignment.due_week_number }}</td>
-			<td>{{ assignment.due_date }}</td>
-			<td>{{ assignment.status }}</td>
+			<td class="editable" data-id="{{ assignment.id }}" data-type="due_date">{{ assignment.due_date }}</td>
+			<td class="editable" data-id="{{ assignment.id }}" data-type="status">
+				{% if assignment.status == "NOT_STARTED"  %}
+				<i class="fa-solid fa-book"></i>
+				{% elif assignment.status == "IN_PROGRESS" %}
+				<i class="fa-solid fa-list-check"></i>
+				{% elif assignment.status == "COMPLETED" %}
+				<i class="fa-solid fa-check"></i>
+				{% elif assignment.status == "GRADED" %}
+				<i class="fa-solid fa-user-check"></i>
+				{% elif assignment.status == "DID_NOT_SUBMIT" %}
+				<i class="fa-solid fa-hexagon-exclamation"></i>
+				{% endif %}
+				{{ assignment.get_status_display }}
+			</td>
 		</tr>
 		{% endfor %}
 	</tbody>
 </table>
 <script>
-{% comment %} var editor = new $.fn.dataTable.Editor( {
-    ajax:  '/api/staff',
-    table: '#assignments',
-    fields: [
-		{label : "Unit", name: "unit_code"},
-		{label: "Title", name: "title"},
-		{label: "Due Week", name: "due_week"},
-		{label: "Due Date", name: "due_date"},
-		{label: "Status", name: "status"},
-    ]
-} ); {% endcomment %}
-
 $(document).ready(function() {
     $('#assignments').DataTable({
-		"order": [[ 2, "des" ]],
+		"order": [[ 5, "asc" ]],
 		"paging": false,
 		"info": false,
+		"columnDefs": [
+			{
+				"targets": [ 7 ],
+				"width": "10%"
+			}
+		]
 	});
 }); 
 
 </script>
 
     <script>
+		// Thanks to hackstarsj!
+		// https://github.com/hackstarsj/simpleDjangoProject/blob/db4d7dd4b3fc0a3d485d2ad3992546435f85c0ff/simpleFirstApp/templates/show_data.html
         $(document).ready(function(){
             $(document).on("click",".editable",function(){
                 var value=$(this).text();
                 var data_type=$(this).data("type");
                 var input_type="text";
-                if(data_type=="created_at")
+                if(data_type=="due_date")
                 {
                     input_type="datetime-local";
                 }
+				if(data_type=="due_week_number")
+				{
+					input_type="number";
+				}
                 var input="<input type='"+input_type+"' class='input-data' value='"+value+"' class='form-control'>";
-                $(this).html(input);
+                // If user is trying to change status, we need to accomodate the dropdown
+				if(data_type=="status")
+				{
+					input="<select class='input-data' class='form-control'>";
+					input+="<option value='NOT_STARTED'>Not Started</option>";
+					input+="<option value='IN_PROGRESS'>In Progress</option>";
+					input+="<option value='COMPLETED'>Completed</option>";
+					input+="<option value='GRADED'>Graded</option>";
+					input+="<option value='DID_NOT_SUBMIT'>Didn't Submit</option>";
+					input+="</select>";
+					$(this).html(input);
+					$(".input-data").focus();
+					$(".input-data").blur(function(){
+					var value=$(this).val();
+					var id=$(this).parent().data("id");
+					var data_type=$(this).parent().data("type");
+					// AJAX REQUEST DATA:
+					var ajax_data = {
+						"id": id,
+						"csrfmiddlewaretoken": "{{ csrf_token }}"
+					};
+					ajax_data[data_type] = value[0];
+					$.ajax({
+                   		url: `{% url "assignment_api" %}`,
+						type:"PATCH",
+						headers: {
+							'X-CSRFToken': '{{ csrf_token }}'
+						},
+                   		data: ajax_data,
+						})		
+						.done(function(data){
+							$(".editable").text(value);
+						})
+						.fail(function(data){
+							alert("Error");
+						});			
+					});
+				} else {
+				$(this).html(input);
+				$(this).find(".input-data").focus(); // focus on input box after clicking
                 $(this).removeClass("editable")
+				}
             });
-
             $(document).on("blur",".input-data",function(){
                 var value=$(this).val();
                 var td=$(this).parent("td");
+				// if user is changing a status, store the readable value as a var so we can change the HTML after
+				var readable_text = $(".input-data option:selected").text();
                 $(this).remove();
-                td.html(value);
+				// check if user is changing a status
+				console.log(readable_text)
+				if(readable_text) {
+					console.log("START SWITCH")
+					switch(value) {
+						case "NOT_STARTED":
+							readable_text = '<i class="fa-solid fa-book"></i> Not Started';
+							console.log("SWITCH RAN ON NOT_STARTED")
+							break;
+						case "IN_PROGRESS":
+							readable_text = '<i class="fa-solid fa-list-check"></i> In Progress';
+							console.log("SWITCH RAN ON IN_PROGRESS")
+							break;
+						case "COMPLETED":
+							readable_text = '<i class="fa-solid fa-check"></i> Completed';
+							console.log("HOLA")
+							break;
+						case "DID_NOT_SUBMIT":
+							readable_text = '<i class="fa-solid fa-hexagon-exclamation"></i> Didn\'t Submit';
+							break;
+						case "GRADED":
+							readable_text = '<i class="fa-solid fa-user-check"></i> Graded';
+							break;
+					}
+					td.html(readable_text);
+				} else {
+					td.html(value);
+				}
                 td.addClass("editable");
                 var type=td.data("type");
                 sendToServer(td.data("id"),value,type);
@@ -93,16 +182,18 @@ $(document).ready(function() {
                    sendToServer(td.data("id"),value,type);
                 }
             });
-
+			// TODO: sendtoserver should be more robust (ie so it can be called when we need to update the status attribute)
             function sendToServer(id,value,type){
-				console.log(id);
-                console.log(value);
-                console.log(type);
+				{% comment %} console.log(id); {% endcomment %}
+                {% comment %} console.log(value); {% endcomment %}
+                {% comment %} console.log(type); {% endcomment %}
+				// Create the ajax body request prior to initialising the ajax request
 				var ajax_data = {
 					'csrfmiddlewaretoken': '{{ csrf_token }}',
 					'id': id, 
 				}
 				ajax_data[type] = value;
+				// run ajax request
                 $.ajax({
                     url: `{% url "assignment_api" %}?pk={id}`,
                     type:"PATCH",
