remove redundant class attributes

--- a/app_uniplan/templates/app_uniplan/assignments.html
+++ b/app_uniplan/templates/app_uniplan/assignments.html
@@ -107,7 +107,7 @@ $(document).ready(function() {
                 // If user is trying to change status, we need to accomodate the dropdown
 				if(data_type=="status")
 				{
-					input="<select class='input-data' class='form-control'>";
+					input="<select class='input-data form-control'>";
 					input+="<option value='NOT_STARTED'>Not Started</option>";
 					input+="<option value='IN_PROGRESS'>In Progress</option>";
 					input+="<option value='COMPLETED'>Completed</option>";
