--- a/app_uniplan/templates/app_uniplan/assignment_detail.html
+++ b/app_uniplan/templates/app_uniplan/assignment_detail.html
@@ -9,7 +9,7 @@
 {% comment %} card {% endcomment %}
 <div class="card">
 	<div class="card-header">
-		<h3 class="card-title">{{assignment.title}} <span class="badge bg-info">{{assignment.task_type}}</span>&nbsp;<span class="badge bg-secondary">{{assignment.unit}}</span></h3>
+		<h3 class="card-title">{{assignment.title}} <span class="badge bg-info">{{assignment.task_type}}</span>&nbsp;<a href="{% url %}"><span class="badge bg-secondary">{{assignment.unit}}</span></a></h3>
 	</div>
 	<div class="card-body">
 		<div class="row">
